data visualization on gpu brand, Opsy, weight, prices and heatmap

--- a/laptop-price-prediction.ipynb
+++ b/laptop-price-prediction.ipynb
@@ -2760,7 +2760,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ca04537f",
+   "id": "90170c91",
    "metadata": {},
    "outputs": [
     {
@@ -2818,7 +2818,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "02b9d7e5",
+   "id": "ee6556fb",
    "metadata": {},
    "outputs": [
     {
@@ -2875,7 +2875,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9e883cd0",
+   "id": "288b4f01",
    "metadata": {},
    "outputs": [
     {
@@ -3046,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "43053f44",
+   "id": "9a42756d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3056,7 +3056,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "60ea8a58",
+   "id": "6fc05ba7",
    "metadata": {},
    "outputs": [
     {
@@ -3221,7 +3221,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cc3f94e8",
+   "id": "48bf8c8c",
    "metadata": {},
    "outputs": [
     {
@@ -3251,7 +3251,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "5c72c7f5",
+   "id": "cd4e9d48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3261,7 +3261,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e8f2d9cb",
+   "id": "14b70337",
    "metadata": {},
    "outputs": [
     {
@@ -3407,7 +3407,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b389d779",
+   "id": "f4e35097",
    "metadata": {},
    "outputs": [
     {
@@ -3439,7 +3439,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "3223d36e",
+   "id": "476fba53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3449,7 +3449,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d8f006cb",
+   "id": "d2dcaa94",
    "metadata": {},
    "outputs": [
     {
@@ -3601,7 +3601,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c700b373",
+   "id": "d6901392",
    "metadata": {},
    "outputs": [
     {
@@ -3626,7 +3626,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "ce88d2a2",
+   "id": "75c00d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3636,7 +3636,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f3e405ec",
+   "id": "249f058c",
    "metadata": {},
    "outputs": [
     {
@@ -3660,7 +3660,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "62ae8a2e",
+   "id": "f9d397c0",
    "metadata": {},
    "outputs": [
     {
@@ -3685,7 +3685,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2e937e50",
+   "id": "28d41e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3695,7 +3695,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "75e46ef9",
+   "id": "15690bf4",
    "metadata": {},
    "outputs": [
     {
@@ -3841,7 +3841,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "bfd30c76",
+   "id": "fb5e571d",
    "metadata": {},
    "outputs": [
     {
@@ -3871,7 +3871,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "937d214c",
+   "id": "c5ab72b6",
    "metadata": {},
    "outputs": [
     {
@@ -3896,7 +3896,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1b964703",
+   "id": "00b5285a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3912,7 +3912,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "05cb396b",
+   "id": "9171133c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3922,7 +3922,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "8072d16e",
+   "id": "aba34bc2",
    "metadata": {},
    "outputs": [
     {
@@ -4074,7 +4074,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "b58b8303",
+   "id": "5e2958e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4084,7 +4084,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c1a88b9c",
+   "id": "d2a0b5b2",
    "metadata": {},
    "outputs": [
     {
@@ -4109,7 +4109,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "9361864e",
+   "id": "384dfb5f",
    "metadata": {},
    "outputs": [
     {
@@ -4150,7 +4150,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3a401c42",
+   "id": "586b62b6",
    "metadata": {},
    "outputs": [
     {
@@ -4183,7 +4183,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "d88972f9",
+   "id": "27af50fb",
    "metadata": {},
    "outputs": [
     {
@@ -4211,7 +4211,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "05aaad35",
+   "id": "b07a8947",
    "metadata": {},
    "outputs": [
     {
@@ -4244,7 +4244,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "d4e9326d",
+   "id": "c2673412",
    "metadata": {},
    "outputs": [
     {
@@ -4285,7 +4285,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "ccd8fbb8",
+   "id": "dc3889c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4296,7 +4296,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "a637f5d0",
+   "id": "186806b3",
    "metadata": {},
    "outputs": [
     {
@@ -4535,7 +4535,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "5682288a",
+   "id": "ea7ba8ce",
    "metadata": {},
    "outputs": [
     {
@@ -4566,14 +4566,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b99eebe2",
+   "execution_count": 88,
+   "id": "88dcfa6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.15,random_state=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e0f7c19a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Touchscreen</th>\n",
+       "      <th>ppi</th>\n",
+       "      <th>Cpu brand</th>\n",
+       "      <th>HDD</th>\n",
+       "      <th>SSD</th>\n",
+       "      <th>Gpu brand</th>\n",
+       "      <th>os</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>Toshiba</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.454670</td>\n",
+       "      <td>Intel Core i5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>Intel</td>\n",
+       "      <td>Windows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1141</th>\n",
+       "      <td>MSI</td>\n",
+       "      <td>Gaming</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>141.211998</td>\n",
+       "      <td>Intel Core i7</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>128</td>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Windows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1049</th>\n",
+       "      <td>Asus</td>\n",
+       "      <td>Netbook</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>135.094211</td>\n",
+       "      <td>Other Intel Processor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Intel</td>\n",
+       "      <td>Others/No OS/Linux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1020</th>\n",
+       "      <td>Dell</td>\n",
+       "      <td>2 in 1 Convertible</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>1</td>\n",
+       "      <td>141.211998</td>\n",
+       "      <td>Intel Core i3</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Intel</td>\n",
+       "      <td>Windows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>878</th>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>141.211998</td>\n",
+       "      <td>Intel Core i5</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>128</td>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Windows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466</th>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.454670</td>\n",
+       "      <td>Intel Core i3</td>\n",
+       "      <td>500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Windows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>Asus</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>0</td>\n",
+       "      <td>141.211998</td>\n",
+       "      <td>Intel Core i7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>512</td>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Windows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>493</th>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.454670</td>\n",
+       "      <td>AMD Processor</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AMD</td>\n",
+       "      <td>Windows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>527</th>\n",
+       "      <td>Lenovo</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.454670</td>\n",
+       "      <td>Intel Core i3</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Others/No OS/Linux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1193</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>226.415547</td>\n",
+       "      <td>Other Intel Processor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Intel</td>\n",
+       "      <td>Mac</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1106 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Company            TypeName  Ram  Weight  Touchscreen         ppi  \\\n",
+       "183   Toshiba            Notebook    8    2.00            0  100.454670   \n",
+       "1141      MSI              Gaming    8    2.40            0  141.211998   \n",
+       "1049     Asus             Netbook    4    1.20            0  135.094211   \n",
+       "1020     Dell  2 in 1 Convertible    4    2.08            1  141.211998   \n",
+       "878      Dell            Notebook    4    2.18            0  141.211998   \n",
+       "...       ...                 ...  ...     ...          ...         ...   \n",
+       "466      Acer            Notebook    4    2.20            0  100.454670   \n",
+       "299      Asus           Ultrabook   16    1.63            0  141.211998   \n",
+       "493      Acer            Notebook    8    2.20            0  100.454670   \n",
+       "527    Lenovo            Notebook    8    2.20            0  100.454670   \n",
+       "1193    Apple           Ultrabook    8    0.92            0  226.415547   \n",
+       "\n",
+       "                  Cpu brand   HDD  SSD Gpu brand                  os  \n",
+       "183           Intel Core i5     0  128     Intel             Windows  \n",
+       "1141          Intel Core i7  1000  128    Nvidia             Windows  \n",
+       "1049  Other Intel Processor     0    0     Intel  Others/No OS/Linux  \n",
+       "1020          Intel Core i3  1000    0     Intel             Windows  \n",
+       "878           Intel Core i5  1000  128    Nvidia             Windows  \n",
+       "...                     ...   ...  ...       ...                 ...  \n",
+       "466           Intel Core i3   500    0    Nvidia             Windows  \n",
+       "299           Intel Core i7     0  512    Nvidia             Windows  \n",
+       "493           AMD Processor  1000    0       AMD             Windows  \n",
+       "527           Intel Core i3  2000    0    Nvidia  Others/No OS/Linux  \n",
+       "1193  Other Intel Processor     0    0     Intel                 Mac  \n",
+       "\n",
+       "[1106 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59a37114",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
